--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,23 +1,12 @@
-img.logo{
-  width:10%;
-  height:10%;
+img.logo {
+    width: 10%;
+    height: 10%;
+    display: block;
 }
-.bg-img {
-  /* The image used */
-  /* background-image: url("header-image.jpg"); */
-  /* background-image: url("Logo.jpg"); */
-  min-height: 380px;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  /* Needed to position the navbar */
-  position: relative;
+.nav-bar{
+    background-color: black;
 }
-.container {
-  position: absolute;
-  margin: 20px;
-  width: auto;
+.mr-auto{
+    float: right;
 }
