changed style of product-section

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,7 +4,7 @@ section.description{
   padding: 7% 15%;
   align-items: space-between;
   align-content: space-around;
-  font-family: 'Heebo', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 .section-description{
   align-items: start;
@@ -39,15 +39,22 @@ div.section-image > img {
     justify-content: center;
     flex-direction: column;
   }
+  .content-wrap > h4 {
+    font-size: 23px;
+  }
   .description-btn{
     width: 250px;
   }
   .section-image{
     width: 100%;
     text-align: center;
+    padding-left: 0;
+    padding-top: 50px;
   }
   section.description{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 @media screen and (max-width: 500px) {
@@ -60,12 +67,17 @@ div.section-image > img {
     width: 250px;
     height: 350px;
   }
+  .content-wrap > h4 {
+    font-size: 20px;
+  }
   .section-image{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding-left: 0;
+    padding-top: 25px;
   }
   .description-btn{
     width: 250px;
@@ -74,6 +86,9 @@ div.section-image > img {
     width: 100%;
   }
   section.description{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
   }
 }
